--- a/Mi_Cuenta.html
+++ b/Mi_Cuenta.html
@@ -2,22 +2,21 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HuertoHogar</title>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/Estilo.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/Estilo.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
 </head>
 
 <body>
     <nav class="navbar navbar-expand-sm navbar-huerto fixed-top">
         <div class="container-fluid">
-            <!-- Logo y texto -->
-            <a class="navbar-brand d-flex align-items-center" href="Huerto.html">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
                 <img src="img/LogoHuerto.png" alt="Logo Huerto" width="45" height="45"
-                    class="d-inline-block align-text-top me-2">
+                    class="d-inline-block align-text-top me-2" />
                 <span class="brand-text">HuertoHogar</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
@@ -26,27 +25,32 @@
 
             <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" href="Index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="Productos.html">Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="Mi_Cuenta.html">Mi Cuenta</a></li>
                     <li class="nav-item"><a class="nav-link" href="Carrito_Compra.html">Carrito</a></li>
                     <li class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>
                     <li class="nav-item"><a class="nav-link" href="Quienes_Somos.html">Quienes Somos</a></li>
                 </ul>
-
                 <form class="d-flex align-items-center">
-                    <input class="form-control me-2" type="text" placeholder="Buscar">
-                    <button class="btn btn-huerto me-3" type="button">Buscar</button>
-                    <!-- Íconos -->
-                    <a href="Carrito_Compra.html" class="icon-link me-3"><i class="bi bi-cart3"></i></a>
-                    <a href="#" class="icon-link"><i class="bi bi-heart"></i></a>
+                    <input id="buscar-input" class="form-control me-2" type="text" placeholder="Buscar producto..." />
+                    <button id="btn-buscar" class="btn btn-huerto me-3" type="button">Buscar</button>
+
+                    <a href="Carrito_Compra.html" class="icon-link me-3">
+                        <i class="bi bi-cart3"></i>
+                        <span id="carrito-count" class="badge bg-success">0</span>
+                    </a>
+                </form>
+                <a href="Favoritos.html" class="icon-link">
+                    <i class="bi bi-heart"></i>
+                    <span id="favoritos-count" class="badge bg-danger">0</span>
+                </a>
                 </form>
             </div>
         </div>
     </nav>
-
     <main class="container py-5">
-        <h2 class="text-center mb-4">👤 Mi Cuenta</h2>
+        <h2 class="text-center mb-4"> Mi Cuenta</h2>
 
         <!-- Botón para ingresar al modo administrador -->
         <div class="text-center mt-4">
